[gd_scene load_steps=9 format=2]

[ext_resource path="res://_LevelScenes/start_menu.gd" type="Script" id=1]
[ext_resource path="res://_LevelScenes/Level_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://_LevelScenes/credits.tscn" type="PackedScene" id=3]
[ext_resource path="res://_LevelScenes/controls.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/NotoSansDisplay-VariableFont_wdth,wght.ttf"

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/NotoSansDisplay-VariableFont_wdth,wght.ttf"

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
level_1_scene = ExtResource( 2 )
credits_scene = ExtResource( 3 )
controls_scene = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.0
margin_right = 71.0
alignment = 1

[node name="start_button" type="Button" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 142.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="credits_button" type="Button" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 142.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="controls_button" type="Button" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 142.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="quit_button" type="Button" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 142.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 69.0
alignment = 1

[node name="title_label" type="Label" parent="HBoxContainer"]
margin_left = 241.0
margin_right = 783.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 4 )
text = "Project Dungeon Bosses"
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/controls_button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
